programming-language/workspace/compiler/tests/fixtures/invalid/syntax_missing_paren.cb64
# Syntax error: missing parenthesis
def main(:
    pass
